# cad-mcp

./: .gitignore  README.md
.claude/: settings.local.json
dxf-mcp/: README.md  pyproject.toml
dxf-mcp/dxf_mcp/: __init__.py  server.py
examples/: floorplan_3br.py
