[project]
name = "dxf-mcp"
version = "0.1.0"
description = "MCP Server 让 AI 智能体直接生成 CAD 图纸 (DXF)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "2016469520" }]
dependencies = ["ezdxf>=1.4"]

[project.scripts]
dxf-mcp = "dxf_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dxf_mcp*"]
